# nfs-manager

./: INSTALL  README  browser.py  browser.py~  data.py  data.py~  functions.py  functions.py~  gui.py  gui.py~  nfs-service.py  nfs.py  nfs.py~  org.nfsmanager.conf  org.nfsmanager.service  preferences.ini  preferences.ini~  preferences.py  preferences.py~  setup.py  writer_service.py
materiale/: APPUNTI DBUS  APPUNTI DBUS~  appunti_policykit.py  com.fabio.WriteService.conf~  consumeservice.py  consumeservice.py~  myservice.py  org.nfsmanager.conf  org.nfsmanager.policy~  org.nfsmanager.service  org.nfsmanager.service~  policykit_test.py  policykit_test.py~  policykit_test2.py  policykit_test2.py~  polkit_test.py  polkit_test.py~  setup.py  signal_handler.py  signal_handler.py~  signal_with_argument.py  tab_widget.py  test_dbus.py  test_dbus.py~
materiale/example-policykit-0.1/: PKG-INFO  example-service.py  nfs-client.py  nfs-client.py~  nfs-service.py  nfs-service.py~  setup.py  setup.py~
materiale/gnome-lirc-properties-0.5.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac
materiale/gnome-lirc-properties-0.5.1/data/: 20-x11-remotes.fdi  Makefile.am  Makefile.in  gnome-lirc-properties-custom-config.ui  gnome-lirc-properties-receiver.ui  gnome-lirc-properties.desktop.in  gnome-lirc-properties.desktop.in.in  gnome-lirc-properties.ui  linux-input-layer-lircd.conf  lirc-generate-linux-input.c  org.gnome.LircProperties.Mechanism.conf  org.gnome.LircProperties.Mechanism.service.in  org.gnome.lirc-properties.mechanism.policy.in  overrides.conf  receivers.conf
materiale/gnome-lirc-properties-0.5.1/data/icons/: Makefile.am  Makefile.in
materiale/gnome-lirc-properties-0.5.1/data/icons/16x16/: Makefile.am  Makefile.in
materiale/gnome-lirc-properties-0.5.1/data/icons/22x22/: Makefile.am  Makefile.in
materiale/gnome-lirc-properties-0.5.1/data/icons/24x24/: Makefile.am  Makefile.in
materiale/gnome-lirc-properties-0.5.1/data/icons/scalable/: Makefile.am  Makefile.in
materiale/gnome-lirc-properties-0.5.1/gnome_lirc_properties/: Makefile.am  Makefile.in  __init__.py  backend.py  config.py  config.py.in  hardware.py  lirc.py  lirc.py~  model.py  policykit.py  shellquote.py
materiale/gnome-lirc-properties-0.5.1/gnome_lirc_properties/ui/: CustomConfiguration.py  Makefile.am  Makefile.in  ReceiverChooserDialog.py  RemoteControlProperties.py  __init__.py  common.py
materiale/gnome-lirc-properties-0.5.1/help/: ChangeLog  Makefile.am  Makefile.in  gnome-lirc-properties.omf.in
materiale/gnome-lirc-properties-0.5.1/help/C/: gnome-lirc-properties.xml
materiale/gnome-lirc-properties-0.5.1/help/cs/: cs.po  gnome-lirc-properties.xml
materiale/gnome-lirc-properties-0.5.1/help/de/: de.po  gnome-lirc-properties.xml
materiale/gnome-lirc-properties-0.5.1/help/es/: es.po  gnome-lirc-properties.xml
materiale/gnome-lirc-properties-0.5.1/help/sv/: gnome-lirc-properties.xml  legal.xml  sv.po
materiale/gnome-lirc-properties-0.5.1/man/: gnome-lirc-properties.1
materiale/gnome-lirc-properties-0.5.1/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  cs.po  de.po  es.po  fi.po  fr.po  gl.po  nb.po  nl.po  pl.po  pt_BR.po  sl.po  sv.po
materiale/indicator-cpufreq-0.1.4/: AUTHORS  PKG-INFO  setup.py
materiale/indicator-cpufreq-0.1.4/indicator_cpufreq/: cpufreq.py  indicator.py  indicator_cpufreqconfig.py
materiale/indicator-cpufreq-0.1.4/po/: fi.po  fr.po  hu.po  indicator-cpufreq.pot  it.po  lt.po  lv.po  nl.po  pl.po  ru.po  tr.po
materiale/jockey-0.9.7/: AUTHORS  ChangeLog  MANIFEST  PKG-INFO  README.txt  do-release  setup.py
materiale/jockey-0.9.7/backend/: com.ubuntu.devicedriver.policy.in
materiale/jockey-0.9.7/examples/: fake.modaliases  mini-cli.py
materiale/jockey-0.9.7/examples/handlers/: fglrx.py  nonfree.py  nvidia.py  pkg.py  vmware-client.py
materiale/jockey-0.9.7/examples/modalias-override-generators/: fglrx_supported  nvidia_supported
materiale/jockey-0.9.7/gtk/: jockey-gtk  jockey-gtk.desktop.in
materiale/jockey-0.9.7/gtk/autostart/: jockey-gtk.desktop.in
materiale/jockey-0.9.7/jockey/: backend.py  detection.py  oslib.py  ui.py  xorg_driver.py
materiale/jockey-0.9.7/kde/: LicenseDialog.ui  ManagerWindowKDE4.ui  ProgressDialog.ui  jockey-kde  jockey-kde.desktop.in  jockey.notifyrc.in
materiale/jockey-0.9.7/kde/autostart/: jockey-kde.desktop.in
materiale/jockey-0.9.7/po/: Makefile  ace.po  af.po  ar.po  ast.po  az.po  be.po  bg.po  bo.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gd.po  gl.po  he.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  jockey.pot  ka.po  km.po  ko.po  ku.po  ky.po  lt.po  lv.po  (+24 more)
materiale/jockey-0.9.7/tests/: backend.py  detection.py  handlers.py  httpd.py  oslib.py  run  run-gtk  run-kde  sandbox.py  shipped_handlers.py  ui.py
materiale/jockey-0.9.7/tests/data/: bad_fingerprint  fingerprint  localhost-expired.pem  localhost.pem  pubring.gpg  secring.gpg
materiale/myexample/: MANIFEST.in  com.example.SampleService.conf~  example-client.py.bak  example-service.py.bak  nfs-client.py  nfs-client.py~  nfs-service.py  nfs-service.py~  org.nfsmanager.policy  setup.py
nfsmanager/: Browser.py  Functions.py  GUIElement.py  GUIElement.py~  NFSWindow.py  NFSWindow.py~  __init__.py  __init__.py~
nfsmanager_lib/: AddHost.py  Window.py  __init__.py
