include $(top_srcdir)/gnome-doc-utils.make

dist-hook: doc-dist-hook

DOC_MODULE = gnome-lirc-properties

DOC_ENTITIES = legal.xml
DOC_INCLUDES =

DOC_FIGURES = \
	figures/main-window.png \
	figures/auto-detect.png \
	figures/custom-remote-model.png \
	figures/custom-remote-basics.png \
	figures/custom-remote-keys.png

EXTRA_DIST = es/legal.xml sv/legal.xml

DOC_LINGUAS = cs de es sv
